修改打包配置，修改部分过时逻辑，新增docker打包配置